feat: Initialize core backend services and project configuration
This commit introduces the foundational structure for the backend,
including a modular design for AI services and their adapters.
It also sets up essential project configuration files for linting,
formatting, and dependency management.

Key changes include:
- Introduction of AI orchestration, embedding, LLM, STT, TTS, and vision services.
- Implementation of adapters for various AI providers (OpenAI, Hugging Face, gTTS).
- Setup of Celery for background tasks.
- Refinement of core configuration and security modules.
- Addition of comprehensive unit tests for new services and adapters.
- Integration of project-wide tools like Flake8 and pre-commit hooks.
- Updates to READMEs and environment examples.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,62 @@
-# FastAPI Backend Environment Variables
+# ====================================================================
+#             Environment Variables for SIGANTENG Backend
+# ====================================================================
+# Salin file ini ke .env dan isi dengan kredensial Anda.
+# --------------------------------------------------------------------
 
-# CORS Origins (comma-separated)
-BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+# --- Core Application Settings ---
+# Atur ke "development" atau "production"
+APP_ENV=development
+# URL Frontend untuk konfigurasi CORS (bisa lebih dari satu, pisahkan dengan koma)
+BACKEND_CORS_ORIGINS=http://localhost:3000
 
-# Hugging Face API Token (required for HuggingFaceHub LLM and some services)
-HF_API_TOKEN=
+# --- Database (Neon PostgreSQL) ---
+# Dapatkan dari dashboard Neon Anda.
+DATABASE_URL=postgres://user:password@host:port/dbname
 
-# Database (Neon)
-DATABASE_URL=
+# --- Background Jobs & Caching (Render Redis) ---
+# Dapatkan dari dashboard Render Anda setelah membuat layanan Redis.
+REDIS_URL=redis://user:password@host:port
 
-# Authentication (Clerk) - Get from your Clerk Dashboard
-CLERK_SECRET_KEY=
+# --- Authentication (Clerk) ---
+# Dapatkan dari dashboard Clerk Anda.
+CLERK_SECRET_KEY=sk_test_...
 
-# File Storage (Cloudinary) - Get from your Cloudinary Dashboard
+# --- File Storage (Cloudinary) ---
+# Dapatkan dari dashboard Cloudinary Anda.
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
-# --- FRONTEND CLERK KEY ---
-# Copy this to frontend/.env.local
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
+# --- AI Service Keys ---
+# Kunci API untuk layanan OpenAI (GPT, Whisper, dll.)
+OPENAI_API_KEY=sk-...
+# Token untuk mengakses model dari Hugging Face Hub
+HF_API_TOKEN=hf_...
+
+# --- DEFAULT AI PROVIDERS ---
+# Tentukan provider default untuk setiap layanan.
+# Bisa "openai" atau "huggingface" (tergantung konfigurasi Anda)
+DEFAULT_LLM_PROVIDER=openai
+DEFAULT_VISION_PROVIDER=openai
+DEFAULT_STT_PROVIDER=openai
+DEFAULT_TTS_PROVIDER=openai
+DEFAULT_EMBEDDING_MODEL=all-MiniLM-L6-v2 # Model sentence-transformers untuk embeddings
+
+# --- Pinecone (untuk digunakan nanti di Fase D) ---
+PINECONE_API_KEY=your_pinecone_api_key_here
+
+
+# ====================================================================
+#             Environment Variables for SIGANTENG Frontend
+# ====================================================================
+# Variabel di bawah ini perlu disalin ke file .env.local di
+# direktori /frontend.
+# --------------------------------------------------------------------
+
+# --- Clerk Publishable Key (Public) ---
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
+
+# --- Backend API URL (Public) ---
+# Gunakan URL deployment Render Anda untuk production.
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
