--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,34 +1,198 @@
-# === Core Framework ===
-# Pustaka dasar untuk membangun dan menjalankan server API
-fastapi
-uvicorn[standard]
-python-dotenv
-python-multipart
-
-# === Background Tasks & Caching ===
-celery
-redis
-
-# === Layanan Cloud & Database ===
-# Klien untuk berinteraksi dengan layanan eksternal
-cloudinary
-clerk-backend-api
-psycopg2-binary
-
-# === AI & Machine Learning ===
-# Pustaka inti untuk menjalankan model-model dari Hugging Face
-transformers
-torch
-torchaudio
-torchvision
-openai
-gtts
-
-# Pustaka spesifik untuk model atau tugas tertentu
-sentence-transformers  # Untuk model embeddings
-openai-whisper         # Untuk model ASR Whisper
-
-# === Utilitas Tambahan ===
-# Pustaka untuk menangani file audio, dll.
-pydub
-soundfile
+accelerate==1.0.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.9
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.0
+asgiref==3.8.1
+async-timeout==4.0.3
+asyncer==0.0.7
+asyncpg==0.29.0
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+Brotli==1.1.0
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+chainlit==1.1.404
+charset-normalizer==3.3.2
+chevron==0.14.0
+chroma-hnswlib==0.7.6
+chromadb==0.5.11
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+comtypes==1.4.7
+contourpy==1.3.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+datahorse==0.1.4
+Deprecated==1.2.14
+diffusers==0.30.3
+distro==1.9.0
+docx==0.2.4
+duckduckgo_search==5.3.1b1
+durationpy==0.9
+fastapi==0.110.3
+filelock==3.16.1
+filetype==1.2.0
+flatbuffers==24.3.25
+fonttools==4.54.1
+frozenlist==1.4.1
+fsspec==2024.9.0
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
+groq==0.11.0
+grpcio==1.66.2
+gTTS==2.5.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html2text==2024.2.26
+httpcore==1.0.6
+httptools==0.6.1
+httpx==0.27.2
+httpx-sse==0.4.3
+huggingface-hub==0.25.1
+humanfriendly==10.0
+hyperframe==6.0.1
+idna==3.10
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+iniconfig==2.3.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.7
+kubernetes==31.0.0
+langchain==1.0.5
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.0.4
+langchain-text-splitters==1.0.0
+langgraph==1.0.2
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.2
+langgraph-sdk==0.2.9
+langsmith==0.4.41
+Lazify==0.4.0
+literalai==0.0.607
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.0
+marshmallow==3.22.0
+matplotlib==3.9.2
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.19.2
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
+ormsgpack==1.12.0
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+pluggy==1.6.0
+posthog==3.7.0
+primp==0.6.3
+propcache==0.2.0
+protobuf==4.25.5
+psutil==6.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pydantic==2.9.2
+pydantic-settings==2.11.0
+pydantic_core==2.23.4
+pydub==0.25.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.1.4
+PyPDF2==3.0.1
+PyPika==0.48.9
+pypiwin32==223
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+pytest==9.0.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-multipart==0.0.9
+python-socketio==5.11.4
+pyttsx3==2.98
+pytz==2024.2
+pywin32==307
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.2
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==80.9.0
+shellingham==1.5.4
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.1
+socksio==1.0.0
+soupsieve==2.6
+SpeechRecognition==3.10.4
+SQLAlchemy==2.0.35
+starlette==0.37.2
+sympy==1.13.3
+syncer==2.0.3
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tokenizers==0.20.0
+tomli==2.0.2
+torch==2.4.1
+tqdm==4.66.5
+transformers==4.45.2
+typer==0.12.5
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.12.2
+tzdata==2024.2
+uptrace==1.27.0
+urllib3==2.2.3
+uvicorn==0.25.0
+watchfiles==0.20.0
+websocket-client==1.8.0
+websockets==13.1
+wikipedia==1.4.0
+wrapt==1.16.0
+wsproto==1.2.0
+xxhash==3.6.0
+yarl==1.14.0
+zipp==3.20.2
+zstandard==0.25.0
